# backend/docs/swagger.yaml
@@ -31,6 +31,11 @@ definitions:
         type: number
       total_income:
         type: number
+      weekly_trends:
+        additionalProperties:
+          format: float64
+          type: number
+        type: object
     type: object
   domain.Record:
     properties:
@@ -298,6 +303,10 @@ paths:
       responses:
         "204":
           description: No Content
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errors.AppError'
         "500":
           description: Internal Server Error
           schema:
@@ -332,6 +341,10 @@ paths:
             $ref: '#/definitions/domain.Record'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.AppError'
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/errors.AppError'
         "500":
@@ -409,6 +422,10 @@ paths:
       responses:
         "204":
           description: No Content
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errors.AppError'
         "500":
           description: Internal Server Error
           schema:
@@ -443,6 +460,10 @@ paths:
             $ref: '#/definitions/domain.User'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.AppError'
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/errors.AppError'
         "500":
